tests/fixtures/invalid/pow_list_set_set.py
# Cannot call pow() with List[int], Set[int], Set[int]
x = pow([1, 2, 3], {1, 2, 3}, {1, 2, 3})
